recursion.lessons.recursion.tree.Tree.scala.error
Tree:4: error: not found: value piplette
if (steps == 0 )     if (piplette à droite = true ) jeter par la fenêtre()
                         ^Tree:4: error: not found: value jeter
if (steps == 0 )     if (piplette à droite = true ) jeter par la fenêtre()
                                                    ^