recursion.lessons.recursion.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {

if (steps == 0 )     if (piplette à droite = true ) jeter par la fenêtre()
avance(length)

droite(angle)




tree(steps-1, length*shrink, angle, shrink)

}
